Closed Bug 1370955 Opened 7 years ago Closed 7 years ago

fix indent in nsMsgDatabase::RemoveHdrFromCache

Categories

(MailNews Core :: Database, defect)

x86_64
Linux
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 56.0

People

(Reporter: aceman, Assigned: aceman)

Details

Attachments

(1 file)

GCC7 found a code line in nsMsgDatabase::RemoveHdrFromCache() warning it is indented misleadingly (the line is not guarded by the preceding if() as could be thought mistakenly).

As compiler warnings tend to abort the build (warnigs-as-errors), let's fix this pre-emptively.
Attached patch patchSplinter Review
Attachment #8875338 - Flags: review?(jorgk)
Comment on attachment 8875338 [details] [diff] [review]
patch

You can just land something like this with rs=white-space-only DONTBUILD, see here:
https://hg.mozilla.org/comm-central/rev/39ee657ffbfd508614ff577604ab750b18cf5061
Attachment #8875338 - Flags: review?(jorgk) → review+
I'm so kind to leave you some meat for landings ;)
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/36e37076b1b36bb009b6f64a36e77a74e2ee1387
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 56.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: