Bug 1370955 - fix indent in nsMsgDatabase::RemoveHdrFromCache. r=jorgk